fix install hook and daemon handling, fix local_conf.json creation

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -10,7 +10,7 @@ fi
 DISABLED=""
 
 disable(){
-  snapctl stop --disable ${SNAP_NAME}.daemon
+  snapctl stop --disable ${SNAP_NAME}.pktfwd
 }
 
 if ! snapctl is-connected gpio; then
@@ -43,6 +43,6 @@ if [ -n "$DISABLED" ]; then
   exit 0
 fi
 
-if snapctl services ${SNAP_NAME}.daemon | grep -q inactive; then
-  snapctl start --enable ${SNAP_NAME}.daemon 2>&1 || true
+if snapctl services ${SNAP_NAME}.pktfwd | grep -q inactive; then
+  snapctl start --enable ${SNAP_NAME}.pktfwd 2>&1 || true
 fi
